--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="src/script/index.js" defer></script>
 </head>
 
-<body class="system">
+<body>
 
   <header>
     <nav class="nav">
@@ -61,7 +61,7 @@
         </div>
 
         <div>
-          <input id="option3" type="radio" name="theme" value="system" checked>
+          <input id="option3" type="radio" name="theme" value="system">
           <label for="option3">System</label>
         </div>
       </fieldset>
