Add another project

--- a/index.html
+++ b/index.html
@@ -136,6 +136,27 @@
           <a href="https://github.com/emgrey02/style-stage-emgrey02" class="project__words-cont--second-link">Code</a>
         </div>
       </div>
+
+      <div class="project right third in-view">
+        <div class="project__image-cont">
+          <span class="project__image-cont--platter"></span>
+          <img class="project__image-cont--image" src="src/assets/harmonic-pres.png"
+            alt="screenshot of Emma's Style Stage submission">
+        </div>
+        <div class="project__words-cont">
+          <h3 class="project__words-cont--title">Harmonic Presence</h3>
+          <p class="project__words-cont--environment">Interactive Multimedia Website</p>
+          <p class="project__words-cont--description"> As a final project for an Interactive Multimedia class, I created
+            a presentation about the presence of harmonics in sound. It is made with <a
+              href="https://pixijs.com">PixiJS</a>,
+            which utilizes HTML Canvas and WebGL with JavaScript. In this project, I use TypeScript and object oriented
+            programming to put together an interactive learning experience for the user. Warning: you must use a
+            larger-screened device - it is not responsive.
+          </p>
+          <a href="https://harmonicpresence.netlify.app" class="project__words-cont--first-link">Live Site</a>
+          <a href="https://github.com/emgrey02/harmonic-presence-pres" class="project__words-cont--second-link">Code</a>
+        </div>
+      </div>
     </section>
 
     <section class="contact" id="contact">
