Add another project

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div class="project left second in-view">
         <div class="project__image-cont">
           <span class="project__image-cont--platter"></span>
-          <img class="project__image-cont--image" src="src/assets/style-stage-screenshot.png"
+          <img class="project__image-cont--image" src="./src/assets/sss.png"
             alt="screenshot of Emma's Style Stage submission">
         </div>
         <div class="project__words-cont">
@@ -141,7 +141,7 @@
         <div class="project__image-cont">
           <span class="project__image-cont--platter"></span>
           <img class="project__image-cont--image" src="src/assets/harmonic-pres.png"
-            alt="screenshot of Emma's Style Stage submission">
+            alt="screenshot of Emma's Harmonic Presence presentation">
         </div>
         <div class="project__words-cont">
           <h3 class="project__words-cont--title">Harmonic Presence</h3>
@@ -151,11 +151,35 @@
               href="https://pixijs.com">PixiJS</a>,
             which utilizes HTML Canvas and WebGL with JavaScript. In this project, I use TypeScript and object oriented
             programming to put together an interactive learning experience for the user. Warning: you must use a
-            larger-screened device - it is not responsive.
+            larger-screened device with a mouse or touchpad (it isn't keyboard accessible), and you must be alright
+            with sounds and animations.
           </p>
           <a href="https://harmonicpresence.netlify.app" class="project__words-cont--first-link">Live Site</a>
           <a href="https://github.com/emgrey02/harmonic-presence-pres" class="project__words-cont--second-link">Code</a>
         </div>
+      </div>
+
+      <div class="project left fourth in-view">
+        <div class="project__image-cont">
+          <span class="project__image-cont--platter"></span>
+          <img class="project__image-cont--image" src="src/assets/todolist.png" alt="screenshot of Emma's to do list">
+        </div>
+        <div class="project__words-cont">
+          <h3 class="project__words-cont--title">To-do List</h3>
+          <p class="project__words-cont--environment">Website</p>
+          <p class="project__words-cont--description"> Using HTML, CSS, and JavaScript, I created a To-do list that one
+            can use in their browser. It utilizes the browser's local storage to remember any changes the user makes
+            to the list when they come back later or reload. I also designed it in a neubrutalism style, which is
+            growing popular lately.
+          </p>
+          <a href="https://codepen.io/emgrey02/full/JjMMeGX" class="project__words-cont--first-link">Live Site</a>
+          <a href="https://codepen.io/emgrey02/pen/JjMMeGX" class="project__words-cont--second-link">Code</a>
+        </div>
+      </div>
+
+      <div class="more">
+        <p> If you'd like to see more of what I've created, check out my <a href="https://github.com/emgrey02">Github
+            page</a> or <a href="https://codepen.io/emgrey02">Codepens</a>. </p>
       </div>
     </section>
 
