Make theme toggle display current system setting

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         </div>
       </fieldset>
 
+      <div class="current-setting">
+        <p class="current-setting__text">your current system setting: <span class="current-setting__name"></span></p>
+      </div>
+
+
     </div>
   </header>
 
