Create visited state for links

--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
             environment,
             and the Fitbit OS Simulator. </p>
           <a href="https://gallery.fitbit.com/details/58e742e9-d043-4ee1-a8be-479c1e1c6db7"
-            class="project__words-cont--first-link">Fitbit App Gallery</a>
-          <a href="https://github.com/emgrey02/statalog" class="project__words-cont--second-link">Code</a>
+            class="project__words-cont--first-link">Fitbit App Gallery<span aria-hidden="true"></span></a>
+          <a href="https://github.com/emgrey02/statalog" class="project__words-cont--second-link">Code<span
+              aria-hidden="true"></span></a>
         </div>
       </div>
 
@@ -137,8 +138,10 @@
               href="https://parcel.com">Parcel</a>. Anyone can contribute and submit a Pull Request to the <a
               href="https://github.com/5t3ph/stylestage">github repository</a> as long as they follow the guidelines!
           </p>
-          <a href="https://stylestage.dev/styles/drawing-board/" class="project__words-cont--first-link">Live Site</a>
-          <a href="https://github.com/emgrey02/style-stage-emgrey02" class="project__words-cont--second-link">Code</a>
+          <a href="https://stylestage.dev/styles/drawing-board/" class="project__words-cont--first-link">Live Site<span
+              aria-hidden="true"></span></a>
+          <a href="https://github.com/emgrey02/style-stage-emgrey02" class="project__words-cont--second-link">Code<span
+              aria-hidden="true"></span></a>
         </div>
       </div>
 
@@ -159,8 +162,10 @@
             larger-screened device with a mouse or touchpad (it isn't keyboard accessible), and you must be alright
             with sounds and animations.
           </p>
-          <a href="https://harmonicpresence.netlify.app" class="project__words-cont--first-link">Live Site</a>
-          <a href="https://github.com/emgrey02/harmonic-presence-pres" class="project__words-cont--second-link">Code</a>
+          <a href="https://harmonicpresence.netlify.app" class="project__words-cont--first-link">Live Site<span
+              aria-hidden="true"></span></a>
+          <a href="https://github.com/emgrey02/harmonic-presence-pres"
+            class="project__words-cont--second-link">Code<span aria-hidden="true"></span></a>
         </div>
       </div>
 
@@ -177,8 +182,10 @@
             to the list when they come back later or reload. I also designed it in a neubrutalism style, which is
             growing popular lately.
           </p>
-          <a href="https://codepen.io/emgrey02/full/JjMMeGX" class="project__words-cont--first-link">Live Site</a>
-          <a href="https://codepen.io/emgrey02/pen/JjMMeGX" class="project__words-cont--second-link">Code</a>
+          <a href="https://codepen.io/emgrey02/full/JjMMeGX" class="project__words-cont--first-link">Live Site<span
+              aria-hidden="true"></span></a>
+          <a href="https://codepen.io/emgrey02/pen/JjMMeGX" class="project__words-cont--second-link">Code<span
+              aria-hidden="true"></span></a>
         </div>
       </div>
 
