Edit prefers-reduce-motion query

--- a/index.html
+++ b/index.html
@@ -83,18 +83,14 @@
         <h3 class="about__container--tidbit">Musician, Web Developer</h3>
         <p class="about__container--para">Hey there! My name is Emma. After completing a bachelor's degree in Clarinet
           Performance, I'm transitioning into a career in Web Development. I'm currently working on an Associate's
-          degree
-          in Interface Design and Web Development and looking for experience so that I can land an entry-level web
-          developer position. </p>
-        <p class="about__container--para">I focus on accessibility and usability in my web creations. I don't want to
-          bar
-          anyone from using a website of mine. While working hard developing, I'm beginning to also enjoy web
-          design as I get more comfortable
-          using Figma. I'm even starting to make my own vector images. Right
-          now I have the most experience using HTML, CSS, and JavaScript without any frameworks at the moment, although
-          I
-          have dabbled in Svelte and React. As I continue coding and learning, I want to keep contributing to
-          open-source projects and start to work on larger projects with others.
+          degree in Interface Design and Web Development with the goal of landing an entry-level frontend developer
+          position. </p>
+        <p class="about__container--para">In my frontend web creations, I focus on accessibility and usability. The
+          web in 2022 is still mostly inaccessible, even when 15% of the world's population is disabled. Everyone
+          deserves access, not just the abled population, and making accessibility improvements benefit all users. I
+          have the most experience developing with HTML, CSS, and JavaScript, and I've dabbled in frameworks like Svelte
+          and React. As I continue coding and learning, I want to keep contributing to open-source projects and
+          start working on larger projects with others.
         </p>
       </div>
     </section>
