GET MY EYES TO FOLLOW THE MOUSE :)

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
           #right-pupil {
             position: relative;
           }
+
+          #left-iris,
+          #right-iris {
+            transform-box: fill-box;
+          }
         </style>
         <g id="emma-cartoon">
           <rect id="chest" x="118" y="290" width="244" height="116" fill="#B87359" />
@@ -147,7 +152,7 @@
               <path id="left-eyelash-shadow"
                 d="M218 114.5C218 114.5 220.312 114 221.5 114C222.688 114 224.5 114.5 224.5 114.5C224.5 114.5 227 115 228 116C230.5 118.5 230 118.5 230 118.5C230 118.5 226.455 118 223.5 118C220.545 118 216 118.5 216 118.5C216 118.5 216.5 116 218 114.5Z"
                 fill="black" />
-              <circle id="left-pupil" cx="224.5" cy="119.5" r="2.5" fill="#141212" />
+              <circle id="left-pupil" cx="224.5" cy="119.5" r="2.5" fill="#141212" transform-origin="223.5 119.5" />
             </g>
             <g id="right-eye">
               <path id="right-eye_2"
@@ -167,7 +172,7 @@
               <path id="right-eyelash"
                 d="M305 124C301.107 123.146 294.5 123 294.5 123C294.5 123 298.8 123.379 302.6 126.435C306.4 129.491 305.978 130 305.978 130L314.5 123.5C314.5 123.5 309.644 125.019 305 124Z"
                 fill="#141212" />
-              <circle id="right-pupil" cx="297.5" cy="128.5" r="2.5" fill="#141212" />
+              <circle id="right-pupil" cx="297.5" cy="128.5" r="2.5" fill="#141212" transform-origin="298 129" />
               <path id="Rectangle 1"
                 d="M294.5 123C294.5 123 297.809 122.984 299.5 123.5C301.423 124.086 303.5 126 303.5 126L305 128C305 128 300.26 126.908 297.5 127C294.706 127.094 291 128 291 128C291 128 291.5 124.5 294.5 123Z"
                 fill="#141212" />
