Remove loader, fix horiztontal scroll

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 
 <body>
 
-  <div id="loader"></div>
-
-  <header style="opacity: 0;">
+  <header>
     <nav class="nav">
       <div class="nav__container">
         <svg class="nav__icon">
@@ -77,7 +75,7 @@
     </div>
   </header>
 
-  <main style="opacity: 0;">
+  <main">
     <section class="about" id="about">
       <h2 class="about__title">About Me</h2>
       <svg class="about__image" width="588" height="428" viewBox="0 0 588 428" fill="none"
@@ -403,45 +401,45 @@
         <path d="M40.5418 129.884C46.7983 121.876 53.305 102.856 73.5758 129.884H40.5418Z" fill="#FFAF51" />
       </symbol>
     </svg>
-  </main>
+    </main>
 
-  <footer class="footer" style="opacity: 0;">
-    <h3 class="footer__contact-title">connect</h3>
-    <div class="sm-links">
-      <ul>
-        <li class="sm-links__link">
-          <a href='https://twitter.com/greyypse'>
-            <img src='src/assets/twitter.svg' alt="twitter logo">
-          </a>
-        </li>
+    <footer class="footer">
+      <h3 class="footer__contact-title">connect</h3>
+      <div class="sm-links">
+        <ul>
+          <li class="sm-links__link">
+            <a href='https://twitter.com/greyypse'>
+              <img src='src/assets/twitter.svg' alt="twitter logo">
+            </a>
+          </li>
 
-        <li class="sm-links__link">
-          <a href="https://github.com/emgrey02">
-            <img src='src/assets/github.svg' width='40' alt="github logo">
-          </a>
-        </li>
-        <li class="sm-links__link">
-          <a href="https://open.spotify.com/user/1223292638?si=3879996965d44679">
-            <img src='src/assets/spotify.svg' alt='spotify logo'>
-          </a>
-        </li>
+          <li class="sm-links__link">
+            <a href="https://github.com/emgrey02">
+              <img src='src/assets/github.svg' width='40' alt="github logo">
+            </a>
+          </li>
+          <li class="sm-links__link">
+            <a href="https://open.spotify.com/user/1223292638?si=3879996965d44679">
+              <img src='src/assets/spotify.svg' alt='spotify logo'>
+            </a>
+          </li>
 
-        <li class="sm-links__link">
-          <a href="https://linkedin.com/in/emma-grey-289321190/">
-            <img src="src/assets/linkedin.svg" alt="linkedin logo">
-          </a>
-        </li>
+          <li class="sm-links__link">
+            <a href="https://linkedin.com/in/emma-grey-289321190/">
+              <img src="src/assets/linkedin.svg" alt="linkedin logo">
+            </a>
+          </li>
 
-        <li class="sm-links__link">
-          <a href="https://www.youtube.com/channel/UCyh26WCoIMLmXchQY1VZhcg">
-            <img src="src/assets/youtube.svg" alt="youtube logo">
-          </a>
-        </li>
+          <li class="sm-links__link">
+            <a href="https://www.youtube.com/channel/UCyh26WCoIMLmXchQY1VZhcg">
+              <img src="src/assets/youtube.svg" alt="youtube logo">
+            </a>
+          </li>
 
-      </ul>
-    </div>
-    <p>© Emma Grey</p>
-  </footer>
+        </ul>
+      </div>
+      <p>© Emma Grey</p>
+    </footer>
 </body>
 
 </html>
