--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
       <div class="moving-lines__line about__line"></div>
       <div class="about__container">
         <h3 class="about__container--tidbit">Musician, Web Developer</h3>
-        <p class="about__container--para">Hey there! My name is Emma. After completing a bachelor's degree in Clarinet
-          Performance, I'm transitioning into a career in Web Development. I'm currently working on an Associate's
+        <p class="about__container--para">Hey there! My name is Emma. After I completed my bachelor's degree in Clarinet
+          Performance, I decided to transition into a career in Web Development. Currently I'm working on an Associate's
           degree in Interface Design and Web Development with the goal of landing an entry-level frontend developer
           position. </p>
         <p class="about__container--para">In my frontend web creations, I focus on accessibility and usability. The
